--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -12,6 +12,7 @@
     "CLAVE_PRODUCTO": "Clave del producto",
     "CLAVE_CLIENTE" : "Clave del cliente",
     "CLAVE_AUTO": "Autogenerar clave",
+    "CLAVE_REPETIDA": "La clave ya existe en otro producto",
     "CLAVE_NO_EDIT": "Las claves no se puede modificar",
     "CORREO_NO_EDIT": "El correo no se puede modificar",
     "PASSWORD": "Contraseña",
@@ -31,6 +32,7 @@
     "DATOS_USUARIO": "Datos del usuario",
     "DATOS_CLIENTE": "Datos del cliente",
     "DATOS_EMPRESA": "Datos de la empresa",
+    "CONFIGURACION_EMPRESA": "Configuración",
     "DATOS_PRODUCTO": "Datos del producto",
     "DESCRIPCION": "Descripción",
     "DESCRIPCION_HINT": "Descripción para la identificación del producto",
@@ -64,6 +66,7 @@
     "FECHA_VENTA": "Fecha de la venta",
     "TIPO_PRECIO": "Tipo de precio",
     "TIPO_DESCUENTO": "Tipo de descuento",
+    "ACEPTARDEC": "Permitir fraccionado",
     "SIN_DESCUENTO": "Sin descuento",
     "PRECIO_ESPECIAL": "Precio especial",
     "PRECIO_UNITARIO": "Precio únitario",
@@ -104,6 +107,7 @@
     "CANCELADAS": "Canceladas",
     "CAMBIO_PASS": "Cambio de contraseña",
     "CAMBIO_PASS_REQ": "Solicitar cambio de contraseña",
+    "SOLICITAR_EMPRESA": "Enviar Solicitud",
     "CORREO_PASS": "Se envió un correo a tu cuenta registrada, utilizalo para cambiar tu contraseña.",
     "COTIZACION": "COTIZACIÓN",
     "CLIENTE_NOEXISTE": "El cliente no es está registrado",
@@ -128,15 +132,27 @@
     "CARGA_OK": "Se cargaron los producto al inventario",
     "PRODUCTOS": "Productos",
     "FORMA_PAGO": "Forma de pago",
+    "ENTRAGA": "Entraga",
+    "ENTRAGA_OK": "Entrega realizada",
+    "ENTREGADO": "Entregado",
+    "ENTREGA": "Entrega",
+    "ENVIO": "Enviar",
+    "RECOGER": "Recoger en tienda",
     "EFECTIVO": "Efectivo",
     "TRANSFERENCIA": "Tranferencia",
     "PAGO_PENDIENTE": "Venta en Abonos",
+    "NO_ENTREGADA": "Pendientes de entrega",
     "PAGO_INICIAL": "Pago inicial",
     "LIQUIDADO": "Liquidar",
     "LiQUIDADAS": "Liquidadas",
     "BUSQUEDA_ESP_HINT": "Solo toman en cuenta las fechas",
     "HEAD_IMPRESION": "Encabezado de Impresión",
+    "PRECIO_SUGERIDO_UNI": "Procentaje sugerido precio unitario",
+    "PRECIO_SUGERIDO_MAY": "Procentaje sugerido precio mayoreo",
+    "PRECIO_SUGERIDO_ESP": "Procentaje sugerido precio especial",
+    "CANT_MAY_SUGERIDA": "Cantidad de mayoreo sugerida",
     "PLH_HEAD": "Encabezado especial para la nota",
+    "PLH_SEG": "Aumenta el porcentaje del precio de compra",
     "PLH_PASSWORD": "Ej. AbcD12435",
     "PLH_CORREO": "Ej. dodrex@dodrex.com",
     "PLH_NOMBRE": "Ej. Juan Hernadez Hernandez",
@@ -161,8 +177,11 @@
 
     "ERROR_DATOS": "Datos no válidos",
     "ERROR_BLOQ": "Tú usuario se encuentra bloqueado, contacte con el administrador",
+    "ERROR_USU_ASIG": "Espera la asignación de tu usuario",
     "ERROR_REC_PAS": "Problemas al tratar de recuperar la contraseña",
     "ERROR_SESION": "¡Error al iniciar sesión!",
+    "ERROR_REINT": "No se pudo reportar vuelve a intentar.",
+    "ERROR_SINC": "La información no se sincronizó correctamente. Presiona 'Reportar' para recargar y enviar la información.",
     "ERROR_REGISTRO": "Los datos nos son válidos o ya existe el usuario",
     "ERROR_EMPRESA": "No existe la empresa, verifíca la clave",
     "ERROR_GRAL": "Ocurrió un error",
