--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -31,6 +31,7 @@
     "CLIENTE": "Cliente",
     "DATOS_USUARIO": "Datos del usuario",
     "DATOS_CLIENTE": "Datos del cliente",
+    "DATOS_SUCURSAL": "Datos Sucursal",
     "DATOS_EMPRESA": "Datos de la empresa",
     "CONFIGURACION_EMPRESA": "Configuración",
     "DATOS_PRODUCTO": "Datos del producto",
@@ -47,7 +48,7 @@
     "NOMBRE_UPPERCASE": "El nombre siempre se tranformar' a mayusculas",
     "NOMBRE_LOWERCASE": "El nombre siempre se tranformara a minúscula",
     "NOMBRE_EMPRESA": "Nombre de la empresa",
-    "UNIRSE": "Uniser a Empresa",
+    "UNIRSE": "Sucursales",
     "NUEVA_EMP": "Nueva Empresa",
     "ID_EMPRESA": "Identificador de la empresa",
     "RFC": "RFC",
@@ -107,7 +108,7 @@
     "CANCELADAS": "Canceladas",
     "CAMBIO_PASS": "Cambio de contraseña",
     "CAMBIO_PASS_REQ": "Solicitar cambio de contraseña",
-    "SOLICITAR_EMPRESA": "Enviar Solicitud",
+    "SOLICITAR_EMPRESA": "Crear Sucursal",
     "CORREO_PASS": "Se envió un correo a tu cuenta registrada, utilizalo para cambiar tu contraseña.",
     "COTIZACION": "COTIZACIÓN",
     "CLIENTE_NOEXISTE": "El cliente no es está registrado",
